kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backstage-backend
            port:
              number: 7007
    host: backstage.aimegazone.com
